--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 <title>Blue Vespa Scooter Game</title>
 <style>
   :root{
-    --app-vh: 100vh;     /* real viewport height (updated via JS) */
-    --header-h: 110px;   /* space reserved when leaderboard is visible */
+    --app-vh: 100vh;   /* updated via JS to real visible height */
+    --header-h: 110px; /* space reserved when Top10 is visible */
   }
 
   html,body{margin:0;padding:0}
@@ -20,7 +20,7 @@
     -webkit-user-select:none; user-select:none;
   }
 
-  /* -------- Leaderboard -------- */
+  /* ---------- Top 10 ---------- */
   #leaderboard{
     width:100%; max-width:720px;
     padding:8px 12px 6px;
@@ -29,11 +29,10 @@
     box-sizing:border-box;
   }
   #leaderboard.hidden{ display:none; }
-
   #leaderboard h3{ margin:6px 0 8px; text-align:center; letter-spacing:.5px }
   #leaderboard ol{ margin:0 auto 6px; padding-left:24px; max-width:680px; line-height:1.35 }
 
-  /* -------- Game area -------- */
+  /* ---------- Game area ---------- */
   #wrap{ position:relative; width:100%; max-width:720px; }
   canvas{
     display:block; width:100%;
@@ -44,7 +43,7 @@
     touch-action:manipulation;
   }
 
-  /* -------- Overlays -------- */
+  /* ---------- Overlays ---------- */
   .overlay{
     position:absolute; inset:0; z-index:10;
     display:flex; flex-direction:column; align-items:center; justify-content:center;
@@ -52,7 +51,7 @@
   }
   .overlay h1{ margin:0 0 10px; font-size:40px }
   .overlay p{ margin:0 0 10px; opacity:.8 }
-  .card-actions{ display:flex; gap:10px; flex-wrap:wrap; justify-content:center; align-items:center }
+  .row{ display:flex; gap:10px; flex-wrap:wrap; justify-content:center; align-items:center }
 
   button{
     padding:10px 16px; font-size:18px; font-weight:800;
@@ -67,7 +66,7 @@
 </style>
 </head>
 <body>
-  <!-- Leaderboard (visible on Start / Game Over, hidden while playing) -->
+  <!-- Top 10 (shown on Start & Game Over; hidden while playing) -->
   <div id="leaderboard">
     <h3>Top 10</h3>
     <ol id="lbList"></ol>
@@ -81,7 +80,7 @@
       <div>
         <h1>Blue Vespa</h1>
         <p>Tap or press <b>Space</b> to jump (double‑jump allowed)</p>
-        <div class="card-actions">
+        <div class="row">
           <button id="startButton" onclick="window.__start&&window.__start()">Start</button>
         </div>
       </div>
@@ -92,12 +91,12 @@
       <div>
         <h1>Game Over</h1>
         <p id="finalScore">Score: 0</p>
-        <div class="card-actions" style="margin:6px 0 10px">
+        <div class="row" style="margin:6px 0 10px">
           <input id="playerInitials" class="initials" maxlength="3" placeholder="AAA" autocomplete="off" spellcheck="false" />
           <button id="saveScoreButton">Save</button>
           <button id="skipButton" class="secondary">Skip</button>
         </div>
-        <div class="card-actions">
+        <div class="row">
           <button id="restartButton">Restart</button>
         </div>
       </div>
@@ -105,7 +104,7 @@
   </div>
 
 <script>
-/* Real viewport height so iOS/Firefox toolbars don’t push things down */
+/* ====== viewport height fix (iOS/Firefox toolbars) ====== */
 function setAppVh(){
   const vv=window.visualViewport;
   const h=vv&&vv.height ? vv.height : (window.innerHeight||document.documentElement.clientHeight||0);
@@ -116,13 +115,14 @@ addEventListener('resize', setAppVh, {passive:true});
 addEventListener('orientationchange', setAppVh, {passive:true});
 if(window.visualViewport) window.visualViewport.addEventListener('resize', setAppVh, {passive:true});
 
+/* ====== canvas & DPR ====== */
 const canvas=document.getElementById('gameCanvas');
 const ctx=canvas.getContext('2d');
 
-/* declare player BEFORE any sizing logic */
+/* player BEFORE sizing so we can clamp safely */
 let player={ x: 90, y: 0, w: 120, h: 80, dy: 0, onGround: false, jumps: 0 };
 
-let W=960, H=540, floorY=Math.round(H*0.70);  /* raised road -> game sits higher */
+let W=960, H=540, floorY=Math.round(H*0.70);  /* raised road to push action up */
 function fitCanvasDPR(){
   const rect=canvas.getBoundingClientRect();
   const DPR=Math.max(1,window.devicePixelRatio||1);
@@ -140,30 +140,35 @@ fitCanvasDPR();
 addEventListener('resize',fitCanvasDPR);
 if(window.visualViewport) window.visualViewport.addEventListener('resize',fitCanvasDPR,{passive:true});
 
-/* Assets */
+/* ====== assets ====== */
 const vespaImg=new Image();
-vespaImg.src='Blue Vespa Right.png';
+vespaImg.src='Blue Vespa Right.png';  // keep this exact name
 vespaImg.onerror=()=>console.warn('Vespa PNG not found. Check file name/path.');
 
-/* World & tuning (friendlier) */
+/* ====== world & tuning (friendlier) ====== */
 let running=false, score=0;
 let obstacles=[];
 
-const SPEED_BASE=3.0;   // slower start
-const SPEED_MAX =15;
-let speed=SPEED_BASE;
+/* slower first game + gentle ramp */
+const SPEED_BASE = 2.8;
+const SPEED_MAX  = 15;
+let speed        = SPEED_BASE;
 
 const world={
   pTallBase:0.14, pTallLate:0.34, tallStreak:0, singleStreak:0, maxTallStreak:1, maxSingleStreak:4,
-  warmupScore:150, rampRate:0.0016,   // gentler ramp
+  warmupScore:150, rampRate:0.0014,
   rtSingle:0.90, rtTall:1.05, rtJitter:0.10
 };
 
-let distSinceSpawn=0, nextGapPx=520;
+let distSinceSpawn=0, nextGapPx=560;  // first obstacle after ~3s at slow speed
 
-const GRAVITY=0.55, JUMP_VEL=10.2;
+/* jump physics: more air on double jump */
+const GRAVITY_ASC  = 0.44;   // up
+const GRAVITY_DESC = 0.60;   // down
+const JUMP_VEL_1   = 11.6;
+the JUMP_VEL_2   = 11.0;
 
-/* Draw helpers */
+/* ====== draw helpers ====== */
 function drawRoad(){
   const roadTop=floorY+2;
   ctx.fillStyle='#2a2a2a'; ctx.fillRect(0, roadTop, W, H-roadTop);
@@ -176,11 +181,11 @@ function drawVespa(){
   else { ctx.fillStyle='#1e8bff'; ctx.fillRect(player.x, player.y, player.w, player.h); }
 }
 
-/* Obstacles & spacing */
+/* ====== obstacle generation ====== */
 function decideTall(s){
   const t=Math.min(1, Math.max(0, (s - world.warmupScore)/1500));
   let p=world.pTallBase*(1-t) + world.pTallLate*t;
-  if(s<800) p*=0.55;                      // more single jumps early
+  if(s<800) p*=0.55;                       // mostly single jumps early
   if(world.tallStreak>0) p*=0.5;
   if(world.tallStreak>=world.maxTallStreak) return false;
   if(world.singleStreak>=world.maxSingleStreak) return true;
@@ -195,12 +200,12 @@ function triangleSpec(tall){
   const base = h*0.9 + Math.random()*8;
   return { base, height:h };
 }
-function planNextGapPx(v,tall){
-  const pxps=Math.max(1, v*60);
-  const rtBase=tall?world.rtTall:world.rtSingle;
-  const rt=Math.max(0.65, rtBase + ((Math.random()*2-1)*world.rtJitter));
-  const margin = 130 + v*7.5 + (tall ? 60 : 12);  // wider gaps as speed rises
-  return Math.max(260, Math.round(pxps*rt + margin));
+function planNextGapPx(v, tall){
+  const pxps = Math.max(1, v * 60);
+  const rtBase = tall ? world.rtTall : world.rtSingle;
+  const rt = Math.max(0.65, rtBase + ((Math.random()*2-1)*world.rtJitter));
+  const margin = 140 + v*8 + (tall ? 64 : 16);  // wider gaps as speed rises
+  return Math.max(280, Math.round(pxps*rt + margin));
 }
 function spawnObstacle(tall){
   const spec=triangleSpec(tall);
@@ -210,15 +215,62 @@ function spawnObstacle(tall){
   distSinceSpawn=0;
 }
 
-/* Core loop */
+/* ====== hit‑box & triangle collision (forgiving) ====== */
+function getPlayerHitbox(){
+  const padX = player.w * 0.22;
+  const padY = player.h * 0.28;
+  return {
+    x: player.x + padX,
+    y: player.y + padY,
+    w: player.w - padX*2,
+    h: player.h - padY*2
+  };
+}
+function pointInTri(px, py, ax, ay, bx, by, cx, cy){
+  const v0x=cx-ax, v0y=cy-ay;
+  const v1x=bx-ax, v1y=by-ay;
+  const v2x=px-ax, v2y=py-ay;
+  const dot00=v0x*v0x+v0y*v0y;
+  const dot01=v0x*v1x+v0y*v1y;
+  const dot02=v0x*v2x+v0y*v2y;
+  const dot11=v1x*v1x+v1y*v1y;
+  const dot12=v1x*v2x+v1y*v2y;
+  const invDen=1/Math.max(1e-8, (dot00*dot11 - dot01*dot01));
+  const u=(dot11*dot02 - dot01*dot12)*invDen;
+  const v=(dot00*dot12 - dot01*dot02)*invDen;
+  return (u>=0 && v>=0 && (u+v)<=1);
+}
+function hitsTriangle(hit, tri){
+  const ax = tri.x, bx = tri.x + tri.base, cx = tri.x + tri.base/2;
+  const ay = tri.y, by = tri.y,            cy = tri.y - tri.height;
+
+  // quick reject: expanded AABB so “close” doesn’t count
+  const pad = 6;
+  if (hit.x + hit.w <= ax + pad) return false;
+  if (hit.x >= bx - pad) return false;
+  if (hit.y + hit.h <= cy + pad) return false;
+  if (hit.y >= ay) return false;
+
+  // precise: check bottom corners of the hitbox
+  const blx = hit.x,           bly = hit.y + hit.h - 2;
+  const brx = hit.x + hit.w,   bry = hit.y + hit.h - 2;
+  return pointInTri(blx, bly, ax, ay, bx, by, cx, cy) ||
+         pointInTri(brx, bry, ax, ay, bx, by, cx, cy);
+}
+
+/* ====== game control ====== */
 function resetGame(){
-  score=0; speed=SPEED_BASE; obstacles.length=0;
-  world.tallStreak=0; world.singleStreak=0;
-  nextGapPx=440; distSinceSpawn=280;  // first obstacle not immediate
-  player.y=floorY-player.h; player.dy=0; player.onGround=true; player.jumps=0;
+  score = 0;
+  speed = SPEED_BASE;
+  obstacles.length = 0;
+  world.tallStreak = 0; world.singleStreak = 0;
+
+  nextGapPx = 560;           // nice long first gap
+  distSinceSpawn = 0;
+
+  player.y = floorY - player.h; player.dy = 0; player.onGround = true; player.jumps = 0;
 }
 function startGame(){
-  // hide leaderboard during gameplay & remove header space
   document.getElementById('leaderboard').classList.add('hidden');
   document.documentElement.style.setProperty('--header-h','0px');
 
@@ -234,11 +286,12 @@ function endGame(){
   document.getElementById('finalScore').textContent=`Score: ${score}`;
   document.getElementById('gameOverScreen').style.display='flex';
 
-  // show leaderboard again & restore header space
   document.getElementById('leaderboard').classList.remove('hidden');
   document.documentElement.style.setProperty('--header-h','110px');
   setAppVh(); fitCanvasDPR();
 }
+
+/* ====== main loop ====== */
 function frame(){
   if(!running) return;
   ctx.clearRect(0,0,canvas.width,canvas.height);
@@ -246,31 +299,38 @@ function frame(){
   drawRoad();
 
   // gentle ramp
-  speed = Math.min(SPEED_MAX, SPEED_BASE + world.rampRate*score);
+  speed = Math.min(SPEED_MAX, SPEED_BASE + world.rampRate * score);
 
-  // player physics
-  player.y += player.dy; player.dy += GRAVITY;
+  // physics with lighter ascent / heavier descent
+  player.y += player.dy;
+  player.dy += (player.dy < 0 ? GRAVITY_ASC : GRAVITY_DESC);
+
   if(player.y >= floorY - player.h){
     player.y = floorY - player.h; player.dy = 0;
-    if(!player.onGround){ player.onGround=true; player.jumps=0; }
+    if(!player.onGround){ player.onGround = true; player.jumps = 0; }
   } else player.onGround = false;
 
   drawVespa();
 
-  // obstacles
+  // obstacles + collision
+  const hit = getPlayerHitbox();
   for(let i=obstacles.length-1;i>=0;i--){
-    const o=obstacles[i]; o.x -= speed;
+    const o=obstacles[i];
+    o.x -= speed;
 
+    // draw triangle
     ctx.fillStyle=o.color; ctx.beginPath();
-    ctx.moveTo(o.x,o.y); ctx.lineTo(o.x+o.base/2,o.y-o.height); ctx.lineTo(o.x+o.base,o.y);
+    ctx.moveTo(o.x,o.y);
+    ctx.lineTo(o.x + o.base/2, o.y - o.height);
+    ctx.lineTo(o.x + o.base,   o.y);
     ctx.closePath(); ctx.fill();
 
-    const box={x:o.x,y:o.y-o.height,w:o.base,h:o.height};
-    if(player.x<box.x+box.w && player.x+player.w>box.x && player.y<box.y+box.h && player.y+player.h>box.y){ endGame(); }
-    if(o.x+o.base<0){ obstacles.splice(i,1); score++; }
+    if(hitsTriangle(hit, o)){ endGame(); break; }
+
+    if(o.x + o.base < 0){ obstacles.splice(i,1); score++; }
   }
 
-  // spawn by distance
+  // spawn by traveled distance
   distSinceSpawn += speed;
   if(distSinceSpawn >= nextGapPx) spawnObstacle(decideTall(score));
 
@@ -282,8 +342,17 @@ function frame(){
   requestAnimationFrame(frame);
 }
 
-/* Controls & robust starters */
-function jump(){ if(player.jumps<2){ player.dy=-JUMP_VEL; player.jumps++; player.onGround=false; } }
+/* ====== input ====== */
+function jump(){
+  if (player.jumps === 0){
+    player.dy = -JUMP_VEL_1;
+    player.jumps = 1;
+    player.onGround = false;
+  } else if (player.jumps === 1){
+    player.dy = -JUMP_VEL_2;
+    player.jumps = 2;
+  }
+}
 
 const startBtn=document.getElementById('startButton');
 const restartBtn=document.getElementById('restartButton');
@@ -303,7 +372,7 @@ document.addEventListener('keydown', (e)=>{
 });
 canvas.addEventListener('touchstart', (e)=>{ e.preventDefault(); if(!running) startGame(); else jump(); }, {passive:false});
 
-/* Leaderboard (hidden during play) */
+/* ====== leaderboard (hidden while playing) ====== */
 const API='https://scooter-game-api.vercel.app';
 function loadLeaderboard(){
   fetch(`${API}/api/leaderboard`).then(r=>r.json()).then(rows=>{
@@ -326,10 +395,10 @@ function saveScore(){
 document.getElementById('saveScoreButton').addEventListener('click', saveScore);
 document.getElementById('skipButton').addEventListener('click', ()=>{ document.getElementById('gameOverScreen').style.display='none'; });
 
-/* expose for Start button inline onclick */
+/* expose for inline onclick */
 window.__start = startGame;
 
-/* initial leaderboard for Start screen */
+/* initial Top10 for Start screen */
 loadLeaderboard();
 </script>
 </body>
