--- a/index.html
+++ b/index.html
@@ -6,16 +6,24 @@
 <title>Blue Vespa Scooter Game</title>
 <style>
   :root{ --app-vh:100vh; --header-h:110px; }
+
   html,body{margin:0;padding:0}
   body{
     background:#cfe9ff;color:#111;font-family:system-ui,-apple-system,Segoe UI,Roboto,Helvetica,Arial,sans-serif;
     overflow:hidden;display:flex;flex-direction:column;align-items:center;
     padding-bottom:env(safe-area-inset-bottom);-webkit-user-select:none;user-select:none;
   }
-  #leaderboard{width:100%;max-width:720px;padding:8px 12px 6px;background:#212529;color:#fff;border-bottom:2px solid rgba(255,255,255,.08);box-sizing:border-box}
+
+  /* Top 10 (visible Start/Game Over; hidden during play) */
+  #leaderboard{
+    width:100%;max-width:720px;padding:8px 12px 6px;background:#212529;color:#fff;
+    border-bottom:2px solid rgba(255,255,255,.08);box-sizing:border-box;
+  }
   #leaderboard.hidden{display:none}
   #leaderboard h3{margin:6px 0 8px;text-align:center;letter-spacing:.5px}
   #leaderboard ol{margin:0 auto 6px;padding-left:24px;max-width:680px;line-height:1.35}
+
+  /* Game area */
   #wrap{position:relative;width:100%;max-width:720px}
   canvas{
     display:block;width:100%;
@@ -24,7 +32,12 @@
     min-height:420px;max-height:calc(100vh - env(safe-area-inset-bottom));
     border:2px solid #000;border-radius:12px;box-sizing:border-box;touch-action:manipulation;
   }
-  .overlay{position:absolute;inset:0;z-index:10;display:flex;flex-direction:column;align-items:center;justify-content:center;background:rgba(255,255,255,.88);color:#111;text-align:center;padding:18px}
+
+  /* Overlays */
+  .overlay{
+    position:absolute;inset:0;z-index:10;display:flex;flex-direction:column;align-items:center;justify-content:center;
+    background:rgba(255,255,255,.88);color:#111;text-align:center;padding:18px
+  }
   .overlay h1{margin:0 0 10px;font-size:40px}
   .overlay p{margin:0 0 10px;opacity:.8}
   .row{display:flex;gap:10px;flex-wrap:wrap;justify-content:center;align-items:center}
@@ -34,6 +47,7 @@
 </style>
 </head>
 <body>
+  <!-- Leaderboard -->
   <div id="leaderboard">
     <h3>Top 10</h3>
     <ol id="lbList"></ol>
@@ -42,6 +56,7 @@
   <div id="wrap">
     <canvas id="gameCanvas" width="960" height="540" aria-label="Blue Vespa Game"></canvas>
 
+    <!-- Start -->
     <div id="startScreen" class="overlay">
       <div>
         <h1>Blue Vespa</h1>
@@ -50,6 +65,7 @@
       </div>
     </div>
 
+    <!-- Game Over -->
     <div id="gameOverScreen" class="overlay" style="display:none">
       <div>
         <h1>Game Over</h1>
@@ -65,7 +81,7 @@
   </div>
 
 <script>
-/* viewport height fix */
+/* ===== viewport height fix (iOS/Firefox toolbars) ===== */
 function setAppVh(){
   const vv=window.visualViewport;
   const h=vv&&vv.height ? vv.height : (window.innerHeight||document.documentElement.clientHeight||0);
@@ -76,52 +92,65 @@ addEventListener('resize', setAppVh, {passive:true});
 addEventListener('orientationchange', setAppVh, {passive:true});
 if(window.visualViewport) window.visualViewport.addEventListener('resize', setAppVh, {passive:true});
 
-/* canvas & DPR */
+/* ===== canvas & DPR ===== */
 const canvas=document.getElementById('gameCanvas');
 const ctx=canvas.getContext('2d');
 
+/* player BEFORE sizing so we can clamp safely */
 let player={ x:90, y:0, w:120, h:80, dy:0, onGround:false, jumps:0 };
 
-let W=960, H=540, floorY=Math.round(H*0.70);
+let W=960, H=540, floorY=Math.round(H*0.70);  /* raised road -> action sits higher */
 function fitCanvasDPR(){
   const rect=canvas.getBoundingClientRect();
   const DPR=Math.max(1,window.devicePixelRatio||1);
-  canvas.width=Math.max(1,Math.round(rect.width*DPR));
+  canvas.width =Math.max(1,Math.round(rect.width *DPR));
   canvas.height=Math.max(1,Math.round(rect.height*DPR));
   ctx.setTransform(DPR,0,0,DPR,0,0);
   W=Math.max(1,Math.round(rect.width));
   H=Math.max(1,Math.round(rect.height));
   floorY=Math.round(H*0.70);
-  if(player && player.y>floorY-player.h){ player.y=floorY-player.h; player.dy=0; player.onGround=true; player.jumps=0; }
+  if(player && player.y>floorY-player.h){
+    player.y=floorY-player.h; player.dy=0; player.onGround=true; player.jumps=0;
+  }
 }
 fitCanvasDPR();
 addEventListener('resize',fitCanvasDPR);
 if(window.visualViewport) window.visualViewport.addEventListener('resize',fitCanvasDPR,{passive:true});
 
-/* assets */
+/* ===== assets ===== */
 const vespaImg=new Image();
-vespaImg.src='Blue Vespa Right.png';
-vespaImg.onerror=()=>console.warn('Vespa PNG not found.');
+vespaImg.src='Blue Vespa Right.png';   // keep exact file name (with spaces)
+vespaImg.onerror=()=>console.warn('Vespa PNG not found. Check file name/path.');
 
-/* world & tuning */
+/* ===== world & tuning (time‑based) ===== */
 let running=false, score=0;
+let scoreTime=0, scoreBonus=0;   // live score parts
+let elapsed=0;                   // seconds since run start
+let last=performance.now();
+
 let obstacles=[];
 
-const SPEED_BASE=2.8;
-const SPEED_MAX =15;
-let speed=SPEED_BASE;
+/* speed in px/second (consistent across FPS) */
+const SPEED_BASE_PPS = 180;      // comfy start (~3 px/frame @60fps)
+const SPEED_MAX_PPS  = 900;      // cap (~15 px/frame @60fps)
+const ACCEL_PPS2     = 8;        // gentle acceleration (px/s^2)
+let speedPPS         = SPEED_BASE_PPS;
 
 const world={
   pTallBase:0.14, pTallLate:0.34, tallStreak:0, singleStreak:0, maxTallStreak:1, maxSingleStreak:4,
-  warmupScore:150, rampRate:0.0014, rtSingle:0.90, rtTall:1.05, rtJitter:0.10
+  warmupScore:150,
+  rtSingle:0.90, rtTall:1.05, rtJitter:0.10
 };
 
-let distSinceSpawn=0, nextGapPx=560;
+let distSinceSpawn=0, nextGapPx=560;  // first gap ~3s at base speed
 
-const GRAVITY_ASC=0.44, GRAVITY_DESC=0.60;
-const JUMP_VEL_1=11.6, JUMP_VEL_2=11.0;   /* <-- fixed line */
+/* jump physics: light ascent, heavier descent for snappy feel */
+const GRAVITY_ASC  = 0.44;
+const GRAVITY_DESC = 0.60;
+const JUMP_VEL_1   = 11.6;
+const JUMP_VEL_2   = 11.0;
 
-/* draw */
+/* ===== draw helpers ===== */
 function drawRoad(){
   const roadTop=floorY+2;
   ctx.fillStyle='#2a2a2a'; ctx.fillRect(0,roadTop,W,H-roadTop);
@@ -134,11 +163,11 @@ function drawVespa(){
   else { ctx.fillStyle='#1e8bff'; ctx.fillRect(player.x, player.y, player.w, player.h); }
 }
 
-/* obstacles */
+/* ===== obstacles ===== */
 function decideTall(s){
-  const t=Math.min(1, Math.max(0, (s-world.warmupScore)/1500));
-  let p=world.pTallBase*(1-t)+world.pTallLate*t;
-  if(s<800) p*=0.55;
+  const t=Math.min(1, Math.max(0, (s - world.warmupScore)/1500));
+  let p=world.pTallBase*(1-t) + world.pTallLate*t;
+  if(s<800) p*=0.55;                       // more singles early
   if(world.tallStreak>0) p*=0.5;
   if(world.tallStreak>=world.maxTallStreak) return false;
   if(world.singleStreak>=world.maxSingleStreak) return true;
@@ -152,22 +181,22 @@ function triangleSpec(tall){
   const base=h*0.9+Math.random()*8;
   return {base, height:h};
 }
-function planNextGapPx(v,tall){
-  const pxps=Math.max(1, v*60);
+function planNextGapPx(vPPS, tall){
+  const pxps=Math.max(1, vPPS);
   const rtBase=tall?world.rtTall:world.rtSingle;
-  const rt=Math.max(0.65, rtBase + ((Math.random()*2-1)*world.rtJitter));
-  const margin=140 + v*8 + (tall?64:16);
+  const rt=Math.max(0.65, rtBase+((Math.random()*2-1)*world.rtJitter));
+  const margin=140 + (vPPS/10) + (tall?64:16);   // wider as speed rises
   return Math.max(280, Math.round(pxps*rt + margin));
 }
 function spawnObstacle(tall){
   const spec=triangleSpec(tall);
   obstacles.push({ x:W+24, y:floorY, base:spec.base, height:spec.height, color:tall?'#ef476f':'#06d6a0', tall });
   if(tall){ world.tallStreak++; world.singleStreak=0; } else { world.singleStreak++; world.tallStreak=0; }
-  nextGapPx=planNextGapPx(speed, decideTall(score));
+  nextGapPx=planNextGapPx(speedPPS, decideTall(score));
   distSinceSpawn=0;
 }
 
-/* hitbox + collision */
+/* ===== hitbox & triangle collision (forgiving) ===== */
 function getPlayerHitbox(){
   const padX=player.w*0.22, padY=player.h*0.28;
   return { x:player.x+padX, y:player.y+padY, w:player.w-padX*2, h:player.h-padY*2 };
@@ -193,17 +222,22 @@ function hitsTriangle(hit, tri){
   return pointInTri(blx,bly,ax,ay,bx,by,cx,cy) || pointInTri(brx,bry,ax,ay,bx,by,cx,cy);
 }
 
-/* game control */
+/* ===== control ===== */
 function resetGame(){
-  score=0; speed=SPEED_BASE; obstacles.length=0;
+  score=0; scoreTime=0; scoreBonus=0; elapsed=0;
+  speedPPS=SPEED_BASE_PPS;
+  obstacles.length=0;
   world.tallStreak=0; world.singleStreak=0;
   nextGapPx=560; distSinceSpawn=0;
   player.y=floorY-player.h; player.dy=0; player.onGround=true; player.jumps=0;
+  last=performance.now();
 }
 function startGame(){
   document.getElementById('leaderboard').classList.add('hidden');
   document.documentElement.style.setProperty('--header-h','0px');
+
   fitCanvasDPR(); setTimeout(fitCanvasDPR,60); setTimeout(fitCanvasDPR,260);
+
   document.getElementById('startScreen').style.display='none';
   document.getElementById('gameOverScreen').style.display='none';
   resetGame(); running=true; window.__startCalled=true;
@@ -213,19 +247,29 @@ function endGame(){
   running=false;
   document.getElementById('finalScore').textContent=`Score: ${score}`;
   document.getElementById('gameOverScreen').style.display='flex';
+
   document.getElementById('leaderboard').classList.remove('hidden');
   document.documentElement.style.setProperty('--header-h','110px');
   setAppVh(); fitCanvasDPR();
 }
 
-/* loop */
+/* ===== main loop (time‑based) ===== */
 function frame(){
   if(!running) return;
+
+  const now=performance.now();
+  const dt=Math.min(0.033, (now-last)/1000); // clamp to 33ms
+  last=now;
+  elapsed += dt;
+
+  // ramp speed gently with time
+  speedPPS = Math.min(SPEED_MAX_PPS, SPEED_BASE_PPS + ACCEL_PPS2*elapsed);
+  const dx = speedPPS * dt; // pixels to move this frame
+
   ctx.clearRect(0,0,canvas.width,canvas.height);
   drawRoad();
 
-  speed=Math.min(SPEED_MAX, SPEED_BASE + world.rampRate*score);
-
+  // physics
   player.y += player.dy;
   player.dy += (player.dy<0 ? GRAVITY_ASC : GRAVITY_DESC);
   if(player.y >= floorY-player.h){
@@ -235,23 +279,46 @@ function frame(){
 
   drawVespa();
 
+  // obstacles + collision
   const hit=getPlayerHitbox();
   for(let i=obstacles.length-1;i>=0;i--){
-    const o=obstacles[i]; o.x -= speed;
+    const o=obstacles[i];
+    o.x -= dx;
+
     ctx.fillStyle=o.color; ctx.beginPath();
-    ctx.moveTo(o.x,o.y); ctx.lineTo(o.x+o.base/2,o.y-o.height); ctx.lineTo(o.x+o.base,o.y); ctx.closePath(); ctx.fill();
+    ctx.moveTo(o.x,o.y);
+    ctx.lineTo(o.x+o.base/2,o.y-o.height);
+    ctx.lineTo(o.x+o.base,o.y);
+    ctx.closePath(); ctx.fill();
+
     if(hitsTriangle(hit,o)){ endGame(); break; }
-    if(o.x+o.base<0){ obstacles.splice(i,1); score++; }
+
+    if(o.x+o.base<0){
+      obstacles.splice(i,1);
+      scoreBonus += o.tall ? 8 : 5;  // bonus for successful clear
+    }
   }
 
-  distSinceSpawn += speed;
-  if(distSinceSpawn>=nextGapPx) spawnObstacle(decideTall(score));
+  // spawn by actual distance traveled
+  distSinceSpawn += dx;
+  if(distSinceSpawn >= nextGapPx) spawnObstacle(decideTall(score));
 
-  ctx.fillStyle='#08304d'; ctx.font='18px system-ui,sans-serif'; ctx.fillText(`Score: ${score}`,12,28);
+  // live score (time + bonuses)
+  scoreTime += dt*10;                   // ~10 pts/sec
+  score = Math.max(0, Math.floor(scoreTime + scoreBonus));
+
+  // HUD (white with subtle outline)
+  ctx.save();
+  ctx.fillStyle='#ffffff';
+  ctx.font='18px system-ui, sans-serif';
+  ctx.lineWidth=4; ctx.strokeStyle='rgba(0,0,0,.35)'; ctx.strokeText(`Score: ${score}`, 12, 28);
+  ctx.fillText(`Score: ${score}`, 12, 28);
+  ctx.restore();
+
   requestAnimationFrame(frame);
 }
 
-/* input */
+/* ===== input ===== */
 function jump(){
   if(player.jumps===0){ player.dy=-JUMP_VEL_1; player.jumps=1; player.onGround=false; }
   else if(player.jumps===1){ player.dy=-JUMP_VEL_2; player.jumps=2; }
@@ -259,6 +326,7 @@ function jump(){
 const startBtn=document.getElementById('startButton');
 const restartBtn=document.getElementById('restartButton');
 const startOverlay=document.getElementById('startScreen');
+
 startBtn.addEventListener('click',startGame);
 restartBtn.addEventListener('click',startGame);
 ['pointerdown','touchend','click'].forEach(t=>{
@@ -273,7 +341,7 @@ document.addEventListener('keydown',e=>{
 });
 canvas.addEventListener('touchstart',e=>{e.preventDefault(); if(!running) startGame(); else jump();},{passive:false});
 
-/* leaderboard */
+/* ===== leaderboard ===== */
 const API='https://scooter-game-api.vercel.app';
 function loadLeaderboard(){
   fetch(`${API}/api/leaderboard`).then(r=>r.json()).then(rows=>{
@@ -288,8 +356,10 @@ function loadLeaderboard(){
 function saveScore(){
   const initials=(document.getElementById('playerInitials').value||'').toUpperCase().replace(/[^A-Z0-9]/g,'').slice(0,3);
   if(!initials){ document.getElementById('gameOverScreen').style.display='none'; return; }
-  fetch(`${API}/api/leaderboard`,{ method:'POST', headers:{'Content-Type':'application/json'}, body:JSON.stringify({name:initials, score}) })
-    .then(()=>loadLeaderboard());
+  fetch(`${API}/api/leaderboard`,{
+    method:'POST', headers:{'Content-Type':'application/json'},
+    body:JSON.stringify({name:initials, score})
+  }).then(()=>loadLeaderboard());
 }
 document.getElementById('saveScoreButton').addEventListener('click',saveScore);
 document.getElementById('skipButton').addEventListener('click',()=>{ document.getElementById('gameOverScreen').style.display='none'; });
