--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@ const WARMUP_SEC     = .5;    // hold base speed for first ~1.8s
 let  speedPPS        = SPEED_BASE_PPS;
 
 const world={
-  pTallBase:0.14, pTallLate:0.34, tallStreak:0, singleStreak:0, maxTallStreak:1, maxSingleStreak:4,
+  pTallBase:0.25, pTallLate:0.45, tallStreak:0, singleStreak:0, maxTallStreak:1, maxSingleStreak:4,
   warmupScore:150,
   rtSingle:0.90, rtTall:1.05, rtJitter:0.10
 };
@@ -174,11 +174,16 @@ function decideTall(s){
   if(world.singleStreak>=world.maxSingleStreak) return true;
   return Math.random()<p;
 }
+function randMid(){
+  // average of 2 uniforms → triangular distribution
+  return (Math.random() + Math.random()) / 2;
+}
+// then use randMid() instead of Math.random()
 function triangleSpec(tall){
   const ramp=Math.min(1, Math.max(0, score/1200));
   const smallMin=28, smallMax=42;
   const tallMin=42+(50-42)*ramp, tallMax=80+(74-80)*ramp;
-  const h=tall ? (tallMin+Math.random()*(tallMax-tallMin)) : (smallMin+Math.random()*(smallMax-smallMin));
+  const h=tall ? (tallMin + randMid() * (tallMax - tallMin)) : (smallMin + randMid() * (smallMax - smallMin));
   const base=h*0.9+Math.random()*8;
   return {base, height:h};
 }
@@ -262,6 +267,7 @@ function frame(){
   const dt=Math.min(0.033, (now-last)/1000); // clamp to 33ms
   last=now;
   elapsed += dt;
+  const dtScale = Math.min(2.0, dt * 60); // scale physics to ~60 FPS; clamp for safety
 
   // consistent opening: hold base speed for WARMUP_SEC, then ramp
   if (elapsed < WARMUP_SEC) {
@@ -275,13 +281,17 @@ function frame(){
   ctx.clearRect(0,0,canvas.width,canvas.height);
   drawRoad();
 
-  // physics
-  player.y += player.dy;
-  player.dy += (player.dy<0 ? GRAVITY_ASC : GRAVITY_DESC);
-  if(player.y >= floorY-player.h){
-    player.y=floorY-player.h; player.dy=0;
-    if(!player.onGround){ player.onGround=true; player.jumps=0; }
-  } else player.onGround=false;
+  // physics (time-based)
+player.y += player.dy * dtScale;
+player.dy += (player.dy < 0 ? GRAVITY_ASC : GRAVITY_DESC) * dtScale;
+
+// ground clamp
+if (player.y >= floorY - player.h) {
+  player.y = floorY - player.h; player.dy = 0;
+  if (!player.onGround) { player.onGround = true; player.jumps = 0; }
+} else {
+  player.onGround = false;
+}
 
   drawVespa();
 
